# zenoh_demo_c

./: CMakeLists.txt  dataset.csv  minica-key.pem  minica.pem  result.json5  sub.json5  test_scout.c
config/: tls.json5
host/: cert.pem  key.pem
include/: scout_eth.c  scout_eth.h
src/: command_master.c  command_slave.c  get.c  json.c  json_test.c  master.c  minica.pem  motor_status_master.c  motor_status_slave.c  pem_decode.c  pub.json5  z_get.c  z_pub.c  z_pub_thr.c  z_queryable.c  z_scout.c  z_sub.c  z_sub_thr.c
